fix other edits from oleg

--- a/dev/card.pug
+++ b/dev/card.pug
@@ -6,7 +6,7 @@ block variables
 
 
 block content
-    main.page-content
+    main.page-content.page-content--card
       .page-inner.page-inner--w1
           include modules/card
           include modules/card-nav
