--- a/dev/css/plugins/slick.scss
+++ b/dev/css/plugins/slick.scss
@@ -88,7 +88,7 @@
     width: 100%;
 }
 
-.product-photos__inner  .slick-current img { 
+.product-photos__inner  .my-gallery .slick-current img { 
     cursor: url(../../dummy/svg/zoom-in.svg), zoom-in;
 }
 
