--- a/dev/modules/card.pug
+++ b/dev/modules/card.pug
@@ -45,12 +45,18 @@ link(rel='stylesheet' type='text/css' media='screen' href='../css/photoswipe.css
         a(href='../dummy/slider/c6.png' data-pswp-width='2500' data-pswp-height='3688' target='_blank')
           img(src='../dummy/slider/c6.png' )
       .product-photos-nav
-        img(src='../dummy/slider/c1.png')
-        img(src='../dummy/slider/c2.png')
-        img(src='../dummy/slider/c3.png')
-        img(src='../dummy/slider/c4.png')
-        img(src='../dummy/slider/c5.png')
-        img(src='../dummy/slider/c6.png')
+        span
+         img(src='../dummy/slider/c1.png')
+        span
+         img(src='../dummy/slider/c2.png')
+        span
+          img(src='../dummy/slider/c3.png')
+        span
+          img(src='../dummy/slider/c4.png')
+        span
+         img(src='../dummy/slider/c5.png')
+        span
+         img(src='../dummy/slider/c6.png')
 
     .product-photos__inner.products-photos-only-mobile.for-slick-slider
 
