--- a/dev/modules/catalog.pug
+++ b/dev/modules/catalog.pug
@@ -28,7 +28,7 @@ block variables
                     img(src='../dummy/catalog/c24.jpg')
                   include card-sizes-block
                   .catalog-item-title 
-                    dev
+                    div
                       .catalog-item-title-title= item.name
                       .catalog-item-price= item.price + ' РУБ'
 
