--- a/dev/modules/popups/size-popup.pug
+++ b/dev/modules/popups/size-popup.pug
@@ -15,4 +15,5 @@ mixin listLinks(classname,...items)
             .col
                 +listLinks('size-list', 'XS', 'S', 'M','L','XL')
     //- button.btn.btn--black.btn--medium.btn--fullwidth.basket-open(type='submit') Выберите размеры   
-    a.btn.btn--black.btn--medium.btn--fullwidth.basket-open(href='#') Выберите размеры  
+    //- a.btn.btn--black.btn--medium.btn--fullwidth.basket-open(href='#') Выберите размеры  
+    a.btn.btn--black.btn--medium.btn--fullwidth.basket-open(href='#') 222 Выберите размеры  
