--- a/dev/scss/blocks/_catalog.scss
+++ b/dev/scss/blocks/_catalog.scss
@@ -651,8 +651,8 @@
     line-height: 20px;
   }
 
-  .catalog-item-price {
-      margin-top: 0;
+  .catalog-item-price { 
+      margin-top: 5px;
       line-height: 12px;
       height: 20px;
   }
