--- a/dev/scss/blocks/_complete-look.scss
+++ b/dev/scss/blocks/_complete-look.scss
@@ -8,6 +8,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        @media screen and (max-width:480px) {
+            max-width: 100%;
+        }
     }
 
     &__text {
@@ -32,6 +36,19 @@
         font-weight: 600;
         font-size: 18px;
         line-height: 25px;
+    }
+
+    @media screen and (max-width:480px) {
+
+        &__info { 
+            margin: 30px auto 0 auto;
+        }
+
+        &__by-all { 
+            font-size: 12px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
     }
 
 
