--- a/dev/scss/blocks/_product.scss
+++ b/dev/scss/blocks/_product.scss
@@ -270,6 +270,7 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 2px 0px 14px rgba(96, 96, 96, 0.2);
+    margin-bottom: 10px;
 }
 
 .card-nav .product-list {
