--- a/dev/css/project-main.scss
+++ b/dev/css/project-main.scss
@@ -570,7 +570,7 @@ body,
 
   @media screen and (max-width:480px) {
 
-    &--card { border: 1px solid red;
+    &--card { 
       font-size: 12px;
       margin-top: 5px;
 
