правка меню для програмиста

--- a/dev/modules/header.pug
+++ b/dev/modules/header.pug
@@ -3,7 +3,7 @@ header.page-header.page-header-fixed1
   //- основное меню
   include menus/header-menu.pug
   //- меню 'Покупателям'
-  include menus/catalog-buyer-menu.pug
+  //- include menus/catalog-buyer-menu.pug
   //- меню 'Поиск'
   include menus/catalog-search-menu.pug
   //- меню 'Каталог'
