--- a/dev/modules/menus/header-menu.pug
+++ b/dev/modules/menus/header-menu.pug
@@ -18,6 +18,9 @@
         li.header-menu__item.header-menu__item_search.catalog-search-open.only-mobile_header-menu
           a(href='#')
             span Поиск
+
+      include catalog-buyer-menu.pug
+
     .header-menu__center
       a.header-logo(href='http://brusnika.ruformat.ru/')
         img(src='../svg/header_logo.png' alt='')
