--- a/dev/modules/static-dress-for-new-season.pug
+++ b/dev/modules/static-dress-for-new-season.pug
@@ -3,4 +3,4 @@ each item in catalogStaticDress
     .catalog-item-text__title= item.title
     .catalog-item-text__lid= item.lid
     a.link-more.link-more-text-js(href=`${item.href}`) Подробнее
-    div.d-none= item.text
+    .catalog-item-text__lid.d-none= item.text
