--- a/dev/brand-large.pug
+++ b/dev/brand-large.pug
@@ -11,7 +11,8 @@ block content
     a(name="top")
     .page-inner.page-inner--w1.page-inner--mobile_empty
       include modules/filters/filterLarge
-    .page-inner.overflow-x1 
+    //- .page-inner.overflow-x1 
+    .page-inner
       #catalog-items.big-grid
         include modules/catalog-large 
       
