map mobile test

--- a/dev/css/project-main.css
+++ b/dev/css/project-main.css
@@ -5462,7 +5462,8 @@ ul.footer-top__list {
 }
 @media screen and (max-width: 768px) {
   #map {
-    height: 440px;
+    border: 1px solid green;
+    height: 100vh;
   }
 }
 
