--- a/dev/scss/blocks/_shop.scss
+++ b/dev/scss/blocks/_shop.scss
@@ -5,9 +5,9 @@
     width: auto;
     height: 1000px;
 
-    @media screen and (max-width:768px) { border: 1px solid green;
-        // height: 440px;
-        height: 100vh;
+    @media screen and (max-width:768px) { 
+        height: 440px;
+        // height: 100vh;
     }
 }
 
