--- a/dev/scss/blocks/_filter.scss
+++ b/dev/scss/blocks/_filter.scss
@@ -45,6 +45,7 @@
 
     &:last-child {
         margin-bottom: 30px;
+        overflow: hidden;
     }
 
     @media screen and (max-width: 768px) {
@@ -85,7 +86,7 @@
 }
 
 .filters-row__list {
-    max-width:  490px; 
+    max-width: 490px;
     position: relative;
     z-index: 1;
 }
@@ -99,7 +100,7 @@
     justify-content: space-between;
     gap: 10px;
 
-    @media screen and(max-width:480px) { 
+    @media screen and(max-width:480px) {
         margin-left: 15px;
     }
 }
@@ -109,6 +110,9 @@
     display: flex;
     text-transform: capitalize;
     margin-left: 30px;
+    background-color: #ffffff;
+    position: relative;
+    z-index: 1;
 
     @media screen and(max-width:480px) {
         margin-right: 15px;
@@ -127,7 +131,7 @@
 }
 
 .filters-list a:hover {
-   font-weight: 600;
+    font-weight: 600;
 }
 
 .filters-list-small a {
@@ -207,7 +211,7 @@
 }
 
 .filter-slider__shops-link,
-.filter-slider__shops-list-link { 
+.filter-slider__shops-list-link {
     margin-left: 10px;
     margin-right: 10px;
     padding: 0;
