--- a/dev/css/project.css
+++ b/dev/css/project.css
@@ -1377,11 +1377,16 @@ span.form-item--error {
   cursor: pointer;
   line-height: 1;
   transition: 0.3s opacity cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  align-items: center;
+  border-radius: 2px;
 }
 
 .form-checkbox .jcf-checkbox {
   top: -1px;
-  min-width: 16px;
+  min-width: 19px;
+  min-height: 19px;
+  border-radius: 2px;
+  border: 1px solid #D6D6D6;
 }
 
 .form-checkbox:hover {
