--- a/dev/modules/orders/items-in-order.pug
+++ b/dev/modules/orders/items-in-order.pug
@@ -10,7 +10,7 @@
           b Количество
         .col-md-3
           b Итого
-  .h2.mb-3.d-lg-none Товары в заказе
+  .h2.mb-3.d-lg-none 2Товары в заказе
   .row
     .col-4.col-lg-6
 
@@ -54,9 +54,9 @@
         .col-lg-6.d-none.d-lg-block 1
         .col-lg-3.d-none.d-lg-block 2 390 Р
   .row.justify-content-between.d-none.d-lg-flex
-    .col-auto 
+    .col-4.col-lg-6 
       //- a.link.link--black_border(href="order-cancel.html") Отменить заказ
-    .col-md-4
+    .col-8.col-lg-6
       .row.mb-2
         .col-md-8.right Общий вес: 
         .col-md-4 4, 28 кг
