--- a/dev/scss/blocks/_history.scss
+++ b/dev/scss/blocks/_history.scss
@@ -71,6 +71,9 @@
             flex-direction: column;
             gap: 5px;
         } 
+        // @media screen and (max-width: 480px) {  border: 1px solid red;
+        //     flex-direction: row;
+        // } 
     }
 
     .tabs-content-item {
@@ -87,6 +90,17 @@
         @media screen and (max-width:768px) {
             margin-bottom: 20px; 
         }
+
+        @media screen and (max-width:480px) {
+            padding-bottom: 20px;
+            margin-bottom: 30px;
+            border-bottom: 1px solid $color-gray-two;
+
+            .tab-heading-item { 
+                padding: 7px 5px 7px 0  !important;
+            }
+        }
+
     }
 
     .tab-heading-item {
@@ -99,6 +113,9 @@
             line-height: 20px;
             font-weight: 600;            
         }
+        // @media screen and (max-width:480px) { border: 1px solid red;
+        //     padding: 0;          
+        // }
     }
 
     .tabs-heading .tab-heading-item,
