--- a/dev/scss/blocks/_order.scss
+++ b/dev/scss/blocks/_order.scss
@@ -88,6 +88,10 @@
     width: 100%;
     max-width: 127px;
     margin-right: 20px;
+
+    @media screen and (max-width:480px) {
+        margin-right: 0;
+    }
 }
 
 .order-table__info {
